fix (again): cut off label in webkit

--- a/frontend/carina/src/styles/CarparkList.scss
+++ b/frontend/carina/src/styles/CarparkList.scss
@@ -1,5 +1,5 @@
 .carparks {
-  flex: auto;
+  flex: 1;
   overflow-y: scroll;
   margin-left: -8px;
   margin-right: -8px;
